upgraded to java 21